--- a/.builds/debian.yml
+++ b/.builds/debian.yml
@@ -12,6 +12,10 @@ sources:
   - ssh://git@git.sr.ht/~aqtrans/gorram
 environment:
   project: gorram
+triggers:
+  - action: email
+    condition: failure
+    to: Jordan Anderson <jordan@jba.io>
 artifacts:
   - gorram/gorram.deb
 tasks:
@@ -46,6 +50,9 @@ tasks:
       go build -ldflags "-X main.sha1ver=$(git rev-parse HEAD) -X main.buildTime=$(date +'%Y-%m-%d_%T')" -o gorram-client ./client
       go build -ldflags "-X main.sha1ver=$(git rev-parse HEAD) -X main.buildTime=$(date +'%Y-%m-%d_%T')" -o gorram-server ./server
       go build -o gorram-cli ./cli
+      if [ "$(git rev-parse origin/master)" != "$(git rev-parse HEAD)" ]; then \
+        complete-build; \
+      fi
   - buikdpkg: |
       export PATH=$PATH:/usr/local/go/bin
       cd ${project}
